Bug 944132 - Make sure we don't loose precision when computing the audio clock when using opensl. r=sotaro